--- a/Contents/Resources/assets/css/list.css
+++ b/Contents/Resources/assets/css/list.css
@@ -70,9 +70,9 @@ body{
     overflow-y: scroll;
 }
 .content_container p{
-    padding:0 15px 0 23px ;
+    padding:10px 15px 10px 23px ;
     border-bottom: solid thin #f0f0f0;
-    height:38px;
+    min-height:18px;
     width: 461px;
     font-family:PingFangSC-Regular;
     font-size:14px;
@@ -82,7 +82,13 @@ body{
     align-items: center;
     cursor: pointer;
 }
-.content_container span:last-child{
+.content_container p span:first-child{
+    display: inline-block;
+    max-width: 80%;
+    word-wrap:break-word;
+    white-space:normal;
+}
+.content_container .item-span-useNum{
     display: inline-block;
     background:#e4e4e4;
     width:19px;
@@ -98,10 +104,13 @@ body{
     background-color: #f6f6f6;
 }
 .item_has_selected{
-    background-color: rgba(74,144,226,.17);
+    background-color: rgba(74,144,226,.17)!important;
 }
-.item_has_selected span:last-child{
-    background:#4a90e2;
+.item_has_selected .item-span-useNum{
+     background:#4a90e2 !important;
+ }
+.item_has_used{
+    background-color: #f6f6f6;
 }
 
 .bottom_container{
@@ -111,4 +120,72 @@ body{
     color:#d0d0d0;
     text-align:center;
     line-height: 30px;
+}
+
+.setting-container{
+    position: absolute;
+    flex: 1;
+    width:100%;
+    height: 100%;
+    top:0;
+    display: none;
+}
+.setting-panel{
+    background:#ffffff;
+    border:1px solid #e1e1e1;
+    box-shadow:0 2px 4px 0 rgba(0,0,0,0.50);
+    border-radius:3px;
+    width:360px;
+    height:136px;
+    position: absolute;
+    right: 20px;
+    top:105px;
+    opacity: 1;
+    -webkit-animation: settingAnimation .6s infinite;
+    -o-animation: settingAnimation .6s infinite;
+    animation: settingAnimation .6s infinite;
+    animation-iteration-count: 1;
+}
+@keyframes settingAnimation {
+    from {
+        top: 80px;
+        opacity: 0;
+    }
+    to{
+        top:105px;
+        opacity: 1;
+    }
+}
+.setting-panel p:first-child{
+    font-family:PingFangSC-Regular;
+    font-size:14px;
+    color:#262626;
+    padding: 20px 0 0 26px;
+}
+.setting-panel select{
+    margin: 15px 0 15px 26px;
+    border:1px solid #dadada;
+    border-radius:6px;
+    width:138px;
+    height:28px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("../imgs/ic_arrow_drop_down.png") no-repeat  120px center transparent;
+    background-size: 10px 5px;
+    font-size: 12px;
+    padding-left: 10px;
+    color:#262626;
+}
+
+.changePro,.logout{
+    border-top:1px solid #dadada;
+    height:38px;
+    line-height: 36px;
+    padding-left: 26px;
+    cursor: pointer;
+    font-size: 13px;
+}
+.logout{
+    color: red;
 }
